force-app/src/objects/c2g__InquiryTemplateColumn__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__CalculateFormulaOnSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Deprecated)Reapply Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ColumnWidth__c</fullName>
        <label>Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionFalseFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionFalseTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionToValue__c</fullName>
        <label>Condition To Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionTrueFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionTrueTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionValue__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>Inquiry Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DrillInquiryTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Drill Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Drill Inquiry Template Columns</relationshipLabel>
        <relationshipName>DrillInquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FormulaDp__c</fullName>
        <label>Formula Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Formula__c</fullName>
        <label>Formula (deprecated - do not remove)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__NegativeFillColor__c</fullName>
        <label>Negative Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NegativeNumberFormat__c</fullName>
        <label>Negative Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parenthesis</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <default>true</default>
                    <label>Signed</label>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__NegativeTextColor__c</fullName>
        <label>Negative Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PositiveFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PositiveTextColor__c</fullName>
        <label>Positive Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Scaling__c</fullName>
        <label>Scaling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale to Nearest Thousand</fullName>
                </value>
                <value>
                    <fullName>Scale to Nearest Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ShowNumberSeparators__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Separators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShowSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Total This Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ValueType__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotNumber</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>zDeprecated:Inquiry Template Column</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>